<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:backgroundTint="@color/white"
    android:foregroundTint="@color/white"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="92dp"
        android:fontFamily="@font/tauri"
        android:text="@string/github"
        android:textColor="@color/renk1"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chip"
        tools:text="Github" />

    <Button
        android:id="@+id/button6"
        android:layout_width="217dp"
        android:layout_height="67dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="56dp"
        android:backgroundTint="@color/renk1"
        android:fontFamily="@font/tauri"
        android:foregroundTint="@color/white"
        android:text="@string/button"
        android:textAlignment="center"
        android:textSize="20sp"
        android:typeface="normal"
        android:textColor="?attr/colorOnPrimary"
        app:iconTint="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/button5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button5"
        app:layout_constraintTop_toTopOf="@+id/button5" />

    <Button
        android:id="@+id/button5"
        android:layout_width="66dp"
        android:layout_height="67dp"
        android:layout_marginStart="56dp"
        android:layout_marginBottom="40dp"
        android:backgroundTint="@color/black"
        android:fontFamily="@font/allerta"
        android:textAlignment="center"
        android:textSize="24sp"
        android:typeface="normal"
        app:icon="@drawable/chat1"
        app:iconTint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="27dp"
        android:layout_marginBottom="-18dp"
        android:fontFamily="@font/tauri"
        android:text="@string/bilgi"
        android:textColor="@color/renk1"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/chip"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <com.google.android.material.chip.Chip
        android:id="@+id/chip5"
        android:layout_width="81dp"
        android:layout_height="47dp"
        android:layout_marginEnd="15dp"
        android:background="@color/renk1"
        android:text="@string/en_yeni"
        android:textAlignment="center"
        android:textColor="@color/white"
        app:chipBackgroundColor="@color/black"
        app:chipStrokeColor="@color/renk1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/chip3"
        app:layout_constraintTop_toTopOf="@+id/chip" />

    <com.google.android.material.chip.Chip
        android:id="@+id/chip3"
        android:layout_width="81dp"
        android:layout_height="47dp"
        android:background="@color/renk1"
        android:text="@string/yakında"
        android:textAlignment="center"
        android:textColor="@color/white"
        app:chipBackgroundColor="@color/black"
        app:chipStrokeColor="@color/renk1"
        app:layout_constraintEnd_toStartOf="@+id/chip5"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/chip2"
        app:layout_constraintTop_toTopOf="@+id/chip2" />

    <com.google.android.material.chip.Chip
        android:id="@+id/chip2"
        android:layout_width="86dp"
        android:layout_height="46dp"
        android:background="@color/renk1"
        android:text="@string/son"
        android:textAlignment="center"
        android:textColor="@color/white"
        app:chipBackgroundColor="@color/black"
        app:chipStrokeColor="@color/renk1"
        app:layout_constraintEnd_toStartOf="@+id/chip3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/chip"
        app:layout_constraintTop_toTopOf="@+id/chip" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_toolbar"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:contentInsetLeft="0dp"
        app:contentInsetStart="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <!-- Sola yerleştirilecek ImageView -->
        <ImageView
            android:id="@+id/toolbarImage"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="start|right"
            android:contentDescription="Back"
            android:padding="8dp"
            android:src="@drawable/user"
            tools:layout_editor_absoluteY="7dp" />

        <!-- Ortalanmış Başlık -->
        <TextView
            android:id="@+id/toolbarTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:fontFamily="serif"
            android:text="Ömer Sefa"
            android:textColor="@color/white"
            android:textSize="22sp"
            tools:layout_editor_absoluteX="50dp"
            tools:layout_editor_absoluteY="16dp" />

    </androidx.appcompat.widget.Toolbar>


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="297dp"
        android:layout_height="320dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:srcCompat="@drawable/anagorsel" />

    <Button
        android:id="@+id/button4"
        android:layout_width="66dp"
        android:layout_height="67dp"
        android:layout_marginTop="240dp"
        android:backgroundTint="@color/black"
        android:fontFamily="@font/allerta"
        android:textAlignment="center"
        android:textSize="24sp"
        android:typeface="normal"
        app:icon="@drawable/fire"
        app:iconTint="@color/renk1"
        app:layout_constraintEnd_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <Button
        android:id="@+id/button"
        android:layout_width="66dp"
        android:layout_height="67dp"
        android:layout_marginTop="240dp"
        android:backgroundTint="@color/renk1"
        android:fontFamily="@font/allerta"
        android:textAlignment="center"
        android:textColorLink="@color/white"
        android:textSize="24sp"
        android:typeface="normal"
        app:icon="@drawable/close"
        app:iconTint="@color/white"
        app:layout_constraintStart_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <com.google.android.material.chip.Chip
        android:id="@+id/chip"
        android:layout_width="71dp"
        android:layout_height="46dp"
        android:layout_marginStart="15dp"
        android:layout_marginBottom="250dp"
        android:background="@color/renk1"
        android:text="@string/tum"
        android:textAlignment="center"
        android:textColor="@color/white"
        app:chipBackgroundColor="@color/renk1"
        app:chipStrokeColor="@color/renk1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/chip2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:layout_constraintVertical_bias="0.78" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="27dp"
        android:fontFamily="@font/tauri"
        android:text="@string/aciklama"
        android:textColor="@color/renk1"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chip" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/tauri"
        android:text="@string/aciklama_kull"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="-45dp"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar"
        app:layout_constraintStart_toEndOf="@+id/toolbar"
        app:layout_constraintTop_toTopOf="@+id/toolbar"
        app:srcCompat="@drawable/more" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="-5dp"
        android:layout_marginTop="-50dp"
        android:rotation="90"
        android:text="@string/profil"
        android:textColor="@color/white"
        android:textSize="70sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="-7dp"
        android:layout_marginEnd="50dp"
        android:autoLink="web"
        android:fontFamily="@font/tauri"
        android:linksClickable="true"
        android:text="https://www.github.com/omersefacarikci"
        android:textColor="@color/black"
        android:textColorLink="@color/black"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/button6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:layout_constraintVertical_bias="0.52" />

</androidx.constraintlayout.widget.ConstraintLayout>